docs: api docs for trigger send eticket endpoint
